--- a/Day-7(Transtion)/style.css
+++ b/Day-7(Transtion)/style.css
@@ -9,7 +9,7 @@ div:hover {
   border-radius: 50%;
 } */
 
-div {
+/* div {
   height: 100px;
   width: 100px;
   background-color: #4dff00ff;
@@ -20,4 +20,50 @@ div {
 div:hover {
   margin-top: 400px;
   background-color: pink;
+} */
+
+/* transform */
+/* section {
+  margin-top: 100px;
+}
+div {
+  width: 200px;
+  height: 50px;
+  text-align: center;
+  background-color: #7aa874;
+  border: 2px solid black;
+  margin: 10px auto;
+}
+div:nth-of-type(2n) {
+  background-color: #f7db6a;
+}
+div:nth-of-type(3n) {
+  background-color: red;
+}
+#one {
+  transform: rotate(45deg);
+}
+#two {
+  transform: rotate(90deg);
+  transform: scale(0.5);
+}
+#three {
+  transform: rotate(-45deg);
+  transform: translateX(100px);
+}
+#four {
+  transform: skew(30deg);
+}
+#five {
+  transform: rotate(30deg) translate(150px);
+} */
+
+/* box shadow */
+div {
+  width: 200px;
+  height: 50px;
+  text-align: center;
+  background-color: #7aa874;
+  margin: 10px auto;
+  box-shadow: 2px 2px 10px red;
 }
