--- a/Backend/EJS/views/home.ejs
+++ b/Backend/EJS/views/home.ejs
@@ -6,7 +6,8 @@
     <title>Home Page</title>
   </head>
   <body>
-    <h1>This is my first project</h1>
+    <h1>This is my first project 1+2</h1>
+    <h3><%= 1+2 %></h3>
     <P
       >////////////////////////////////////////////////// Good morning. My name
       is Sachin Tyagi, and I am from Dholpur, Rajasthan. I am pursuing a B.Tech
